--- a/src/components/issue.css
+++ b/src/components/issue.css
@@ -1,7 +1,7 @@
 .issueBody {
     display: block;
     width: 600px;
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(255, 255, 255);
     border: rgb(0, 0, 0) 6px double;
     box-shadow: 8px 8px 8px rgb(0, 0, 0);
     margin-bottom: 20px;
@@ -14,8 +14,8 @@
 .allIssues {
     margin: 10px;
     width: 700px;
-    background-color: rgb(242, 174, 174);
-    border: grey 2px double;
+    background-color: red;
+    border: whitesmoke 2px double;
     box-shadow: 8px 8px 8px rgb(0, 0, 0);
 }
 
